[package]
name = "icu_sepsis_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
deep_causality = { git = "https://github.com/deepcausality-rs/deep_causality.git" }
deep_causality_algorithms = { git = "https://github.com/deepcausality-rs/deep_causality.git" }
deep_causality_tensor = { git = "https://github.com/deepcausality-rs/deep_causality.git" }
polars = { version = "0.36", features = ["lazy", "parquet", "ipc", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
