[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "deep_causality"
version = "0.1.0"
description = "A computational causality engine for AI safety and explainable inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
keywords = ["causality", "causal-inference", "explainable-ai", "machine-learning"]

[project.optional-dependencies]
dev = ["pytest", "polars", "numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "deep_causality._core"
